# tracelens

./: .env  .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: config.py  db.py  main.py
backend/app/models/: evaluation.py  evaluation_result.py  rag_observation.py  span.py  trace.py
backend/app/routes/: evaluations.py  health.py  rag.py  spans.py  traces.py
backend/app/schemas/: evaluations.py  rag.py  spans.py  traces.py
backend/app/services/evaluation/: factory.py  heuristic_judge.py  llm_judge.py  prompts.py  runner.py  types.py
backend/tests/: conftest.py  test_llm_judge.py  test_rag.py
examples/rag_quickstart/: trace_example.py
frontend/: Dockerfile.dev  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/(app)/: layout.tsx
frontend/app/(marketing)/: layout.tsx  page.tsx
frontend/app/traces/: page.tsx
frontend/components/dashboard/: EvaluationPanel.tsx  LatencyBreakdown.tsx  MetadataPanel.tsx  MetricCard.tsx  Panel.tsx  RAGEvaluationPanel.tsx  RAGObservationCard.tsx  RawDataPanel.tsx  ScoreBadge.tsx  ScoreGauge.tsx  TraceHealthBadge.tsx  TraceOverviewCards.tsx  TracesView.tsx  useTracesWithMetrics.ts
frontend/components/layout/: PageHeader.tsx  Sidebar.tsx  ThemeToggle.tsx
frontend/components/marketing/: AmbientTraceField.tsx  AnimatedTraceMockup.tsx  Hero.tsx  (+10 more)
frontend/lib/: api.ts  metrics.ts  ragMetrics.ts  types.ts  utils.ts
sdk/: README.md  pyproject.toml
sdk/tracelens/: __init__.py  client.py  trace.py  types.py
(+11 files in other folders)
