[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tracelens"
version = "0.1.0"
description = "Python SDK for TraceLens — observability and evaluation for RAG and AI agent systems"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "responses>=0.25.0",   # mock HTTP in tests
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["tracelens"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
